app/assets/stylesheets/home.scss
/* ... */
.plus_icon {
  position: absolute;
  left: 100px;
  bottom: 0px;
}
.select_with_icon {
  font-family: 'FontAwesome', 'Second Font name';
  width: 100%;
  height: 30px;
  margin-top: 8px;
  background-color: transparent;
  color: black;
}
.modal_header_feed{
  background-color: #f5f6f7;
}
.emoji_img_upload>input {
//  display: none;
}

.image-upload img{
  width: 20px;
  margin-right: 10px;  
}
.emojionearea.emojionearea-inline {
  height: 100px;
}
.c_pointer{
  cursor: pointer;
}
.image-upload label{
  font-size: 13px;
  font-weight: 500;
  cursor: pointer;
}
.con_modal_width{
width: 100% !important;
}
.modal_con_banner_btn:hover {
  background-color: #54b2b2;
  border: 0px;
  border-radius: 20px;
  color: white !important;
  /* height: 35px; */
  padding: 8px 39px;
}

// .emojionearea-button{
//   display: none ;
// }
.opa{
  opacity: 1 !important;
}
.ds_none_block{
  // display: none !important;
}

.emojionearea-button-open{
 display: none !important;
}

  .get-emoji:after, .get-emoji:before {
  content: " ";
  display: table;
  clear: both;
}

.add_height{
  height: 40px !important;
  overflow: hidden !important;
}
#divImageMediaPreview img {
  padding: 0px !important;
  border: solid 2px #888888;
  border-radius: 5px;
}

button.rm_btn {
  width: 150px;
  background-color: transparent;
  border: solid 2px #888888;
  border-radius: 5px;
  margin-top: 10px;
}
input#file-input {
  display: none;
}
a.share-on-facebook.btn.btn-primary.set-border-radius {
  color: white;
}
span.remove.fa.fa-times {
  font-size: 15px;
}
.blog_margin_top{
  margin-top: 50px !important;
}

// .emojionearea-button-open {
//   position: absolute;
//   right: 310px;
//   top: 151px;
// }
// .feell{
//   padding-left: 35px;
// }
// img.img_emoji_start {
//   display: none;
// }


// edit emoji plugin
// .emojionearea .emojionearea-button > div.emojionearea-button-open {
//   background-position: 0 -24px;
//   filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
//   opacity: 1 !important;
// }
// .emojionearea .emojionearea-button.active > div.emojionearea-button-open {
//   -webkit-transform: rotate(0deg) !important;
//   -o-transform: rotate(0deg) !important;
//   transform: rotate(0deg) !important;
//   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
//   opacity: 0;
// }
.follow_btn{
  color: white;
  background-color: #54b2b2;
  text-transform: uppercase;
  padding: 7px 20px;
  font-size: 12px;
  border-radius: 20px;
  /* float: left; */
  font-weight: bold;
   margin-left: 20px; 
  // margin-top: 10px;
  width: 150px;
}
.detail-img p img {
  width: 100% !important;
  height: auto !important;
}
.mt15_blog{
  margin-top: 13px;
}

